--- a/css/style.css
+++ b/css/style.css
@@ -108,3 +108,20 @@ img {
   z-index: 10;
 }
 
+/* Icons */
+.icons {
+  padding: 30px;
+}
+
+.icons h3 {
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+
+.icons i {
+  background: #28a754;
+  color: #fff;
+  padding: 1rem;
+  border-radius: 50%;
+  margin-bottom: 15px;
+}
