--- a/css/utilities.css
+++ b/css/utilities.css
@@ -7,6 +7,7 @@
   color: #0284d0;
 }
 
+/* Button */
 .btn {
   cursor: pointer;
   display: inline-block;
@@ -36,4 +37,17 @@
 .btn-light {
   background: #f4f4f4;
   color: #333;
+}
+
+/* Flex items */
+
+.flex-items {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.flex-items > div {
+  padding: 20px;
 }
