--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ img {
 }
 
 .hero {
-  background: url('../images/showcase.jpg') no-repeat center center/cover;
+  background: url('../images/home/showcase.jpg') no-repeat center center/cover;
   height: 100vh;
   position: relative;
   color: #fff;
